Added makefile and updated gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,7 @@
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 .idea
+
+
+# Executable
+fake_component_main_example
